# Backlog

./: .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  LICENSE  README.md  config.default.yaml  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yaml  pyproject.toml
backend/: .dockerignore  .env.template  Dockerfile  codecov.yaml  pyproject.toml
backend/backlog_app/: alembic.ini  app_lifespan.py  config.default.yaml  config.py  jinja2_templates.py  main.py  prestart.sh  taskiq_broker.py
backend/backlog_app/_helpers/: create_super_user.py  slug_helper.py
backend/backlog_app/alembic/: env.py
backend/backlog_app/alembic/versions/: 2026_02_09_1441-b470381bb2ef_add_published_field_to_movie_table.py  2c6bd7e56b3f_create_users_table.py  (+8 more)
backend/backlog_app/api/: __init__.py  auth.py  crud.py  main_view.py  movie.py  movie_view.py  users.py  users_view.py
backend/backlog_app/core/: database.py
backend/backlog_app/crud/: movie.py
backend/backlog_app/dependencies/: access_tokens.py  backend.py  fastapi_users_routers.py  strategy.py
backend/backlog_app/mailing/: send_email.py
backend/backlog_app/models/: __init__.py  access_token.py  movie.py  users.py
backend/backlog_app/schemas/: helper.py  movie.py  user.py
backend/backlog_app/storages/: database.py
backend/backlog_app/tasks/: __init__.py  email_task.py  movie_task.py
backend/backlog_app/templates/: base.html
backend/tests/: conftest.py  test_crud.py
backend/tests/test_api/: conftest.py  test_main_view.py
backend/tests/test_schemas/: test_movie.py  test_users.py
(+92 files in other folders)
