[project]
name = "backlog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosmtplib>=5.1.0",
    "alembic>=1.18.1",
    "asyncpg>=0.31.0",
    "fastapi-users[sqlalchemy]>=15.0.3",
    "fastapi[standard]>=0.128.0",
    "jinja2>=3.1.6",
    "pydantic-settings[yaml]>=2.12.0",
    "sqlalchemy[asyncio]>=2.0.46",
    "taskiq>=0.12.1",
    "taskiq-redis>=1.2.1",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "black>=26.1.0",
    "isort>=7.0.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
asyncio_mode = "auto"
